--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint .  --ext .js"    
+    "lint": "eslint .  --ext .js",
+    "lint-fix": "eslint . --ext .js --fix"    
   },
   "author": "",
   "license": "ISC",
